--- a/Notebook 1. Exploración de datos.ipynb
+++ b/Notebook 1. Exploración de datos.ipynb
@@ -39,8 +39,8 @@
    "outputs": [],
    "source": [
     "estra = pd.read_csv('estratificacion.csv',delimiter=',', index_col='ID')\n",
-    "data_csv_zona = pd.read_csv('residuosrecogidos_zona.csv', delimiter=',')\n",
-    "data_csv_localidad = pd.read_csv('residuosrecogidos_localidad.csv', delimiter=',')"
+    "data_csv_zona = pd.read_csv('residuosrecogidos_zona_ori.csv', delimiter=',')\n",
+    "data_csv_localidad = pd.read_csv('residuosrecogidos_localidad_ori.csv', delimiter=',')"
    ]
   },
   {
@@ -158,11 +158,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Residuos per cápita - Localidades (RPC kg/dia)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datos_rpc = func_tools.plot_localidades_crecimiento_rpc(estra,data_csv_localidad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Scatter [height=250 width=650 tools=['hover']]\n",
+    "%%opts Scatter (color='k' size=8)\n",
+    "scatter = hv.Scatter(datos_rpc, \n",
+    "                     kdims=['MES', 'RPC kg/día'],\n",
+    "                     vdims=['AÑO','Nombre localidad']\n",
+    "                    ).groupby(['Nombre localidad','AÑO'])(plot=dict(show_grid=True))\n",
+    "scatter"
+   ]
   }
  ],
  "metadata": {
